# ansible-role-unifi

./: .ansible-lint  .ansible-lint-ignore  README.md  pyproject.toml
.github/workflows/: ansible-role.yml
defaults/main/: main.yml  versions.yml
files/audit/: admin-home.rules  fonduio.rules  tmp.rules
files/backups/: b2-backup.timer
files/logdna/: logdna.service
handlers/: main.yaml
meta/: main.yml  requirements.yml
molecule/default/: converge.yml  molecule.yml
tasks/: apparmor.yml  apt.yml  auditd.yml  backups.yml  certbot.yml  disks.yml  docker.yml  firewall.yml  logdna.yml  main.yml  nginx.yml  rebuild.yml  secrets.yml  swap.yml  timesync.yml  unifi.yml
templates/backups/: b2-backup.service.j2
templates/certbot/: nginx-certs.conf.j2
templates/logdna/: logdna.conf.j2
templates/nginx/: default.conf.j2  unifi.conf.j2
tests/: extra-vars.yml  playbook.yml
tests/roles/tests/defaults/: main.yml
tests/roles/tests/tasks/: main.yml  nginx.yml  rclone.yml
