[project]
name = "ansible-role-unifi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Matt Copperwaite", email = "matt@copperwaite.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ansible>=10.5.0",
    "ansible-lint>=24.9.2",
    "requests>=2.32.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ansible_role_unifi"]
